==History

[jerbil-1.0.2 15-Aug-2012]

  Add a catchall for connecting to older servers
  
[jerbil-1.0.1 15-Aug-2012]

  Add NoMethodError as a reason why calls tp older servers may fail.
  
[jerbil-1.0.0 15-Aug-2012]

  Release of new version, featuring server discovery, the new jservice scripts to start
  any service, increased reliability, improved jerbil command and other minor changes.

[jerbil-0.99.13 26-Jul-2012]

  Reworked remote server logic to ensure duplicate servers and services are purged

[jerbil-0.99.12 25-Jul-2012]

  further annotations

[jerbil-0.99.11 25-Jul-2012]

  Annotated to help debug key issues

[jerbil-0.99.10 25-Jul-2012]

  jerbil/jerbil_service/client requires server instead of servers

[jerbil-0.99.09 25-Jul-2012]

  Fix typo when adding services from remote server

[jerbil-0.99.08 25-Jul-2012]

  Fix error in thor services verify

[jerbil-0.99.07 24-Jul-2012]

  another release candidate with tweaks to sbin scripts.

[jerbil-0.99.06 23-Jul-2012]

  minor tweaks to config files for installation

[jerbil-0.99.05 23-Jul-2012]

  fixed Etc.getpwnam.name

[jerbil-0.99.04 23-Jul-2012]

  fixed Jerbil::Config to inherit JerbilService::Config

[jerbil-0.99.03 23-Jul-2012]

  Release candidate for testing

[jerbil-0.99.02 12-June-2012]

  Fix mistaken call to get_key, now gone

[jerbil-0.99.01 08-June-2012]

  First pre-release of Jerbil 1.0.0, offering flexible server configuration and a single
  script for controlling services.
  
  * reconfigured options to use Jeckyl::Service and to add net address and mask details
  * renamed Jerbil::ServerRecord to Jerbil::Servers to reflect the role of the class

[jerbil-0.2.21 19-May-2012]

  Added Aurelius to the default files and rename jers to jerbil

[jerbil-0.2.20 28-Apr-2012]

  Annotate the client calls to try to understand the NoMethod errors raised

[jerbil-0.2.19 22-Mar-2012]

  Fix a bug where 1.9 was failing cos instance_methods returns symbols instead of
  strings.
