@@ -1,14 +1,13 @@
 # Created by Jevoom
 #
 # 15-Aug-2012
-#     Add a catchall for connecting to older servers
-#     
+#     Ensure only valid servers are remembered during start-up.
 
 module Jerbil
-  # version set to 1.0.2
-  Version = '1.0.2'
+  # version set to 1.0.3
+  Version = '1.0.3'
   # date set to 15-Aug-2012
   Version_Date = '15-Aug-2012'
-  #ident string set to: jerbil-1.0.2 15-Aug-2012
-  Ident = 'jerbil-1.0.2 15-Aug-2012'
+  #ident string set to: jerbil-1.0.3 15-Aug-2012
+  Ident = 'jerbil-1.0.3 15-Aug-2012'
 end
